--- a/project/scripts/package/DEBIAN/changelog
+++ b/project/scripts/package/DEBIAN/changelog
@@ -3,7 +3,9 @@ gpio-mqtt (0.0.1) no-stable; urgency=medium
 
 
 [Sergey Zhukov]
-
-* 0.0.2 - Extra timing and value translation
+* 0.0.5 -  
+  0.0.4 - New line at the end of value was striped
+  0.0.3 - Config for release was changed
+  0.0.2 - Extra timing and value translation
   0.0.1 - just forwarding one pin state to broker
 
