--- a/project/scripts/package/DEBIAN/changelog
+++ b/project/scripts/package/DEBIAN/changelog
@@ -3,6 +3,7 @@ gpio-mqtt (0.0.5) no-stable; urgency=medium
 
 
 [Sergey Zhukov]
+* 0.0.9 - inversion for embedded controller pins
 * 0.0.8 - config for side modules 
   0.0.7 - WB side modules support
   0.0.6 - Fix for no broker on start
